tests/errors/parser-invalid-number.spcasmtest
org 0
label = %134af
